# enterprise-data-analysis-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data_agent/: __init__.py  agent.py  cli.py  config.py  datasource.py  docx_writer.py  prompts.py  report.py  sandbox.py  tools.py
sample-data/: sales.csv
tests/: smoke_core.py
