[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "A general-purpose enterprise data-analysis agent: Claude writes and runs pandas/SQL against files and databases in a loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "anthropic>=0.49",
  "duckdb>=1.1",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "matplotlib>=3.7",
  "python-docx>=1.1",
]

[project.scripts]
data-agent = "data_agent.cli:main"

[tool.setuptools.packages.find]
include = ["data_agent*"]
